fix(settings-modal): Fix old scrollbar bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -118,7 +118,6 @@ its supposed to.
 + The modal itself +
 ========
 */
-
 .wallpaper_modal,
 .fav_modal,
 .settings_modal,
@@ -145,10 +144,18 @@ its supposed to.
   left: 50%;
   padding: 10px 15px;
   transform: translate(-50%, -50%);
-  border-radius: 20px;
+
   overflow-y: auto;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.37);
   border: 1px solid var(--settings-button-outline);
+}
+
+/* Modal border radius */
+
+.wallpaper_modal_content,
+.favorites_modal_content,
+.sounds-modal-content {
+  border-radius: 20px;
 }
 
 /* Make settings much more optimized for various screen sizes. 
@@ -158,6 +165,8 @@ its supposed to.
   height: calc(100% - 150px);
   max-width: calc(100% - 40px);
   max-height: calc(100% - 40px);
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
 }
 
 .wallpaper_modal_content {
